fixed header for landscape on smaller mobile devices

--- a/styles.css
+++ b/styles.css
@@ -600,6 +600,26 @@ footer img:hover {
   }
 }
 
+@media (max-width: 670px) {
+  h1 {
+    font-size: 8.25vw;
+  }
+
+  nav ul {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+  }
+
+  nav ul li {
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+  }
+}
+
 @media (max-aspect-ratio: 3/4) {
   body {
     width: 80%;
@@ -629,7 +649,7 @@ footer img:hover {
 
   h1 {
     font-size: 8.15vw;
-    margin-bottom: max(-1vw, 0px);
+    margin-bottom: max(-1vw, -10px);
   }
 
   nav ul li,
